vpc/security-groups.tf
# resource "aws_security_group" "public_sg" {
#   name_prefix = "public-sg-"
#   vpc_id      = aws_vpc.meetmap-vpc.id
#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }


#   tags = {
#     Name = "public-sg"
#   }
# }

# Create the security group for the private subnet
# resource "aws_security_group" "private_sg" {
#   name_prefix = "private-sg-"
#   vpc_id      = aws_vpc.meetmap-vpc.id

#   ingress {
#     from_port       = 8080
#     to_port         = 8080
#     protocol        = "tcp"
#     security_groups = [aws_security_group.public_sg.id]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "private-sg"
#   }
# }
